# quiz-agent

./: .claudeignore  .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  CONTEXT.md  Dockerfile  PRODUCT_SPEC.md  README.md  fly.toml  graph.py  pub_quiz_generation_prompt.md  pyproject.toml
apps/question-generator/: Makefile  README.md  pyproject.toml
apps/question-generator/app/: __init__.py  main.py
apps/question-generator/app/api/: routes.py  schemas.py
apps/question-generator/app/generation/: __init__.py  advanced_generator.py  examples.py  generator.py  prompt_builder.py  storage.py
apps/question-generator/app/image_generation/: env_loader.py  hint_images.py  r2_uploader.py  silhouettes.py
apps/question-generator/app/scoring/: __init__.py
apps/question-generator/app/sourcing/: fact_sourcer.py  models.py  news_source.py  web_search_source.py
apps/question-generator/app/verification/: __init__.py
apps/question-generator/app/web/: routes.py
apps/question-generator/prompts/: question_critique.md  question_critique_v2.md  question_generation.md  question_generation_kids.md  question_generation_map.md  question_generation_silhouette.md  question_generation_themed.md  question_generation_v2_cot.md  question_generation_v3_fact_first.md
apps/question-generator/scripts/: generate_hint_images.py
apps/quiz-agent/: .gitignore  Dockerfile  README.md  alembic.ini  export_questions.py  fly.staging.toml  fly.toml  import_questions.py  populate_local_db.py  pyproject.toml  questions_export.json  test_chromadb.py
apps/quiz-agent/alembic/: README  env.py
apps/quiz-agent/alembic/versions/: 0001_auth_phase1_tables.py  0002_app_attest_tables.py  0003_users_table.py  0004_refresh_token_subject.py  0005_subscription_tables.py  0006_rc_environment.py  0007_feedback_table.py
apps/quiz-agent/app/: __init__.py  config.py  logging_config.py  main.py  rate_limit.py  serializers.py  startup_checks.py
apps/quiz-agent/app/api/: admin.py  deps.py  rest.py
apps/quiz-agent/app/auth/: __init__.py  account_service.py  app_attest.py  apple.py  apple_oauth.py  apple_secrets.py  attest_challenge.py  identity.py  refresh.py  tokens.py
apps/quiz-agent/app/db/: __init__.py  base.py  engine.py  models.py
apps/quiz-agent/app/evaluation/: __init__.py  evaluator.py
apps/quiz-agent/app/input/: __init__.py  parser.py
apps/quiz-agent/app/monitoring/: question_monitor.py
apps/quiz-agent/app/quiz/: flow.py
apps/quiz-agent/app/rating/: __init__.py  feedback.py
apps/quiz-agent/app/retrieval/: __init__.py  question_retriever.py  sync_pgvector_store.py
apps/quiz-agent/app/session/: __init__.py  manager.py
apps/quiz-agent/app/translation/: __init__.py  feedback_messages.py  store.py  translator.py
apps/quiz-agent/app/tts/: __init__.py  cache.py  number_normalization.py  service.py  voices.py
apps/quiz-agent/app/usage/: account_merge.py  entitlement.py  rc_service.py  subscription_state.py  tracker.py
apps/quiz-agent/app/voice/: __init__.py  transcriber.py
apps/quiz-agent/cli/: README.md  __init__.py  client.py  quiz.py  terminal_ui.py
apps/quiz-agent/scripts/: audit_sandbox_rows.py  backup_questions.py  export_openapi.py  pregenerate_feedback_audio.py
apps/quiz-agent/tests/: conftest.py  test_admin_key_verify.py  test_admin_premium.py  test_alembic_autogenerate_guard.py  test_alembic_migration_drift.py  test_alembic_version_table_isolation.py  test_app_attest.py  test_apple_oauth.py  test_apple_secrets.py  test_apple_verifier.py  test_attest_challenge.py  test_auth_apple_endpoint.py  test_auth_bootstrap_attest.py  test_auth_endpoints.py  test_auth_identity.py  test_auth_me_endpoints.py  test_auth_refresh.py  test_auth_tokens.py  test_config_jwt_identity.py  test_db_engine_url.py  test_entitlement.py  test_evaluator_paraphrase_tolerance.py  test_feedback_routes.py  test_feedback_service.py  test_flow_intent_guard.py  test_headline_answer_evaluator.py  test_health.py  test_mcq_evaluator.py  test_misc_elevenlabs_auth.py  test_number_normalization.py  test_pack_quota_bypass.py  test_paths_resolution.py  test_paywall_trigger_response.py  test_pending_store.py  test_pgvector_mcq_roundtrip.py  test_public_question_contract.py  test_question_monitor.py  test_question_openapi_visibility.py  test_question_retriever_expiry.py  test_question_retriever_filters.py  (+19 more)
apps/quiz-agent/tests/db/: test_pack_ownership.py  test_pgvector_store.py
apps/quiz-pack-api/: Dockerfile  Makefile  README.md  docker-compose.yml  fly.staging.toml  fly.toml  pyproject.toml
apps/quiz-pack-api/alembic/: env.py
apps/quiz-pack-api/alembic/versions/: 1c5e0fa7b3d4_core_entities_issue_33_task_1_5.py  29f509ffa769_init_empty_baseline_issue_33_task_1_3.py  4d8e2b7c1f0a_order_cost_capture.py  7a2c91d40b1e_allow_archived_review_status.py  9c1a2f6e5b3d_manual_retry_count.py
apps/quiz-pack-api/app/: config.py  cost_tracking.py  feature_flags.py  logging_config.py  main.py  rate_limit.py
apps/quiz-pack-api/app/api/: __init__.py  deps.py  routes.py  (+1 more)
apps/quiz-pack-api/prompts/: question_critique.md  question_critique_image.md  question_critique_v2.md  question_generation.md  question_generation_entertainment.md  question_generation_hint_image.md  question_generation_kids.md  question_generation_open.md  question_generation_themed.md  question_generation_v2_cot.md  question_generation_v3_fact_first.md  question_rewrite.md
apps/quiz-pack-api/scripts/: answer_quality_audit.py  archive_questions.py  auto_fix_answers.py  convert_options_in_text_to_mcq.py  delete_or_reject.py  generate_blind_maps.py  generate_pack.py  generate_silhouettes.py  import_questions_json.py  migrate_chroma_to_postgres.py  migrate_pending_to_postgres.py  refresh_topic_pool.py  validate_generation.py
apps/quiz-pack-api/tests/: _isolation.py  conftest.py  test_alembic_autogenerate_guard.py  test_config_jwt_identity.py  test_config_storekit_env.py  test_cost_tracking.py  test_feature_flags.py  test_generation_model_config.py  test_llm_factory.py  test_migration_check.py  test_question_provenance.py  test_question_storage_pending.py
(+1298 files in other folders)
