[project]
name = "question-generator"
version = "0.1.0"
description = "Admin tool for generating and curating quiz questions"
requires-python = ">=3.11"
dependencies = [
    "quiz-shared",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "langchain>=0.3.9",
    "langchain-openai>=0.2.10",
    "gradio>=4.0.0",
]

[tool.uv.sources]
quiz-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
