[project]
name = "quiz-agent"
version = "0.1.0"
description = "AI-powered quiz agent API for clients (iOS, terminal, TV)"
requires-python = ">=3.11"
dependencies = [
    "quiz-shared",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "langchain>=0.3.9",
    "langchain-openai>=0.2.10",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
