[project]
name = "quiz-agent"
version = "0.1.0"
description = "AI-powered quiz agent API for clients (iOS, terminal, TV)"
requires-python = ">=3.11"
dependencies = [
    "quiz-shared",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "langchain>=0.3.9",
    "langchain-openai>=0.2.10",
    "openai>=1.0.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "rich>=13.0.0",
]

[tool.uv.sources]
quiz-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
