[project]
name = "quiz-agent"
version = "0.1.0"
description = "AI-powered quiz agent API for clients (iOS, terminal, TV)"
requires-python = ">=3.11"
dependencies = [
    "quiz-shared",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "openai>=1.0.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "pydub>=0.25.0",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=2.0.0",
]

[tool.uv.sources]
quiz-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [".", "../../packages/shared"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
