[project]
name = "quiz-pack-api"
version = "0.1.0"
description = "On-demand quiz pack generation API: orders, JWS verify, ARQ worker (issue #33)"
requires-python = ">=3.11"
dependencies = [
    "quiz-shared",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "langchain>=0.3.9",
    "langchain-openai>=0.2.10",
    "gradio>=4.0.0",
    "anthropic>=0.42.0",
    "geopandas>=0.14.0",
    "matplotlib>=3.8.0",
    "cartopy>=0.22.0",
    "boto3>=1.34.0",
    "tavily-python>=0.5.0",
    "google-generativeai>=0.8.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    # Phase 1 (issue #33) — must stay 1:1 with Dockerfile pip install list per
    # memory project_dockerfile_drift.
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "arq>=0.26.0",
    "redis>=5.0.0",
    "cryptography>=42.0.0",
    "sse-starlette>=2.1.0",
    "pydantic-settings>=2.3.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv.sources]
quiz-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [".", "../../packages/shared"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["app"]
