[project]
name = "quiz-pack-api"
version = "0.1.0"
description = "On-demand quiz pack generation API: orders, JWS verify, ARQ worker (issue #33)"
requires-python = ">=3.11"
dependencies = [
    "quiz-shared",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "langchain>=0.3.9",
    "langchain-openai>=0.2.10",
    "gradio>=4.0.0",
    "anthropic>=0.42.0",
    "geopandas>=0.14.0",
    "matplotlib>=3.8.0",
    "cartopy>=0.22.0",
    "boto3>=1.34.0",
    "tavily-python>=0.5.0",
    "google-generativeai>=0.8.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "slowapi>=0.1.9",
    # app/cost_tracking.py (#95) — OpenRouter credits API; also a transitive
    # dep of openai/langchain-openai, pinned here because the worker imports
    # it directly at boot.
    "httpx>=0.27.0",
    # Phase 1 (issue #33) — must stay 1:1 with Dockerfile pip install list per
    # memory project_dockerfile_drift.
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "arq>=0.26.0",
    "redis>=5.0.0",
    "cryptography>=42.0.0",
    "sse-starlette>=2.1.0",
    "pydantic-settings>=2.3.0",
    "pytest-asyncio>=0.23.0",
]

[project.optional-dependencies]
# Integration-test extras. CI installs these explicitly; runtime images do not.
# respx mocks HTTPS at httpx's transport layer — used by tests/integration/ to
# block real LLM/Tavily calls (task 2.11a–e).
test = [
    "respx>=0.21.1",
]

[tool.uv.sources]
quiz-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [".", "../../packages/shared"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: end-to-end tests that require Postgres + Redis (skipped without env vars)",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
